# TTK4147_miniproject

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  Untitled 1.odt
awnsers/: .~lock.Awnser_m.odt#  Awnser_m.odt  New_awnser.odt
miniproject-files/controller/: pid.txt
src/: globalHeader.h  main.c  main.c~  mp  sharedVariables.h  sharedVariables.h~  timeDifference.c  timeDifference.c~  timeDifference.h  timeDifference.h~
src/main_workers/: controller.c  controller.c~  receiver.c  receiver.c~
utilities/: BOARD_DATA.txt  OUTPUT_DATA  board.sh  getInet.py  insertIP.py  main.sh  main.sh~  plot_output.py  res.txt.save  setup.sh  testGnuplot  testGnuplot~  translate_to_plotable.py  translate_to_plotable.py~
